--- a/client/src/pages/PaymentSuccess.css
+++ b/client/src/pages/PaymentSuccess.css
@@ -37,6 +37,7 @@
 }
 
 .payment-success .card-button{
+    
     width: 80%;
     justify-content: space-around;
 
@@ -44,4 +45,5 @@
 
     flex-direction: row;
     margin:auto;
+    margin-top: 30px;
 }
