--- a/client/src/pages/AdministrativeDocument.css
+++ b/client/src/pages/AdministrativeDocument.css
@@ -61,3 +61,9 @@ ion-avatar{
 .document-pick ion-slides{
     height: 100%;
 }
+.continue-container{
+    width: 260px;
+    margin: auto;
+    margin-top: -30px;
+
+}
