--- a/client/src/pages/ProjectDetail.css
+++ b/client/src/pages/ProjectDetail.css
@@ -13,6 +13,12 @@
     margin-top: 30px;
 }
 
+.project-detail .description{
+    height: 110px;
+    overflow: scroll;
+    line-height: 20px;
+    margin:5;
+}
 
 ion-grid{
     --ion-grid-width:200px;
