--- a/client/src/pages/Portfolio/Portfolio.css
+++ b/client/src/pages/Portfolio/Portfolio.css
@@ -5,3 +5,18 @@
     width: 100%;
     height: 100%;
 }
+
+.graph-container{
+}
+
+.graph-container img{
+    width: 100%;
+    height: 100%;
+}
+
+.global-info{
+    width: 90%;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    text-align:center;
+}
