--- a/client/src/pages/MainPage.css
+++ b/client/src/pages/MainPage.css
@@ -11,3 +11,10 @@ ion-slides .center{
 .slide-project ion-card-content{
   height: 55px;
 }
+
+.slide-arrow{
+  align-self: center;
+}
+.slide-arrow ion-icon{
+  font-size: 48px;
+}
